data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_167.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7e\02\95\80\80\80\00\01\03\65\6e"
    "\76\0d\69\6d\70\6f\72\74\65\64\5f\66\75\6e\63\00"
    "\00\03\82\80\80\80\00\01\01\07\91\80\80\80\00\01"
    "\0d\65\78\70\6f\72\74\65\64\5f\66\75\6e\63\00\01"
    "\0a\92\80\80\80\00\01\8c\80\80\80\00\00\02\7e\10"
    "\00\02\7e\42\2a\0b\0b\0b"
  )
""
)